--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08bdbe36",
+   "id": "3f8c904c",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7f821a",
+   "id": "fdd1af6f",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf38f448",
+   "id": "c5426403",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10123d3a",
+   "id": "616e0df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e989342",
+   "id": "54208f3f",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "446667bd",
+   "id": "117d31c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36234b33",
+   "id": "732940d0",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e614aff",
+   "id": "63ef611d",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68294af4",
+   "id": "5b2133cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "31f0d087",
+   "id": "6132b0c9",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "340bd897",
+   "id": "a034c322",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fd79bca6",
+   "id": "f9326720",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "20dad705",
+   "id": "7cb79b8c",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1e9b774d",
+   "id": "6ada7ffa",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "702854a8",
+   "id": "c292ad79",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ee420fdc",
+   "id": "a54cca86",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "068c7490",
+   "id": "48ddf562",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3d394e",
+   "id": "c463e218",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "74d0b011",
+   "id": "7ed9a0fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9d105a6d",
+   "id": "e8619b63",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "33dec785",
+   "id": "72dc5435",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d00e54",
+   "id": "17772633",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "85b14b40",
+   "id": "a90de9e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e0998720",
+   "id": "39fcc0ae",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "de538485",
+   "id": "dd63d233",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ef466bfd",
+   "id": "6fe561c1",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b80b6a9",
+   "id": "23798c59",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "20c406c3",
+   "id": "e6ba28d5",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "87a4c0f3",
+   "id": "63502748",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f36c7e0",
+   "id": "0211c24b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "42a3d4fc",
+   "id": "9736e6ab",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c801dae2",
+   "id": "12f4fd72",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2a98e587",
+   "id": "37b7273f",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2959b30a",
+   "id": "9f87fabd",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6e35c196",
+   "id": "a8d7e91b",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2ace11",
+   "id": "7091996c",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5cfcfa88",
+   "id": "5f29ec12",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5532655",
+   "id": "cbb09511",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab173483",
+   "id": "ff361530",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e688f379",
+   "id": "9a36688c",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4ceafc",
+   "id": "5b50ba23",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a96d81b1",
+   "id": "deeb29c8",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "55d09b2f",
+   "id": "3b999167",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9547ddc",
+   "id": "8d6dba50",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "737a0173",
+   "id": "9e18bb1d",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8e982fe8",
+   "id": "0b45ecad",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8d1e87f1",
+   "id": "350c7363",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628f6158",
+   "id": "adf0eb44",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bf6f1ac3",
+   "id": "671490e0",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c611aab",
+   "id": "05da6f1f",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e17d4f60",
+   "id": "8f39a77c",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5a0cca8c",
+   "id": "e876182f",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8d2da44f",
+   "id": "75d15dbf",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6d2d5570",
+   "id": "83110675",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "55bce3b4",
+   "id": "7192f327",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6fe96cd0",
+   "id": "97b3f3c3",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0760e59f",
+   "id": "a7ee4e20",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cc066dd2",
+   "id": "403db0f6",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e3fb1522",
+   "id": "8cd44567",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e3ca3001",
+   "id": "c762480e",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "bb904656",
+   "id": "59975557",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9dc83425",
+   "id": "86d7135b",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f95907fe",
+   "id": "324ae0d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9046b0",
+   "id": "8d8dafc3",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "734492c5",
+   "id": "c72227e8",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9dd95a58",
+   "id": "84945762",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "0df3aede",
+   "id": "5caea443",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c385611e",
+   "id": "8514bd6b",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d736ca",
+   "id": "00560f63",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "137c69b8",
+   "id": "f12d99c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a243f6b5",
+   "id": "016c238c",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "640faf2a",
+   "id": "1ae3512b",
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e30808da",
+   "id": "89394cbe",
    "metadata": {},
    "source": [
     "# Exercise: Word count\n",
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7fecd887",
+   "id": "c1b1ce85",
    "metadata": {},
    "outputs": [
     {
@@ -2588,8 +2588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "44d421f0",
+   "execution_count": 72,
+   "id": "a3df669d",
    "metadata": {},
    "outputs": [
     {
@@ -2597,8 +2597,8 @@
      "output_type": "stream",
      "text": [
       "lines: 11\n",
-      "characters: 0\n",
-      "words: 0\n"
+      "characters: 165\n",
+      "words: 28\n"
      ]
     }
    ],
@@ -2613,7 +2613,10 @@
     "for one_line in open('wcfile.txt'): \n",
     "    number_of_lines += 1   # each iteration means 1 more line\n",
     "    \n",
-    "    number_of_characters += len(one_line)   # how many characters in the current line? add to number_of_chara\n",
+    "    number_of_characters += len(one_line)   # how many characters in the current line? add to number_of_characters\n",
+    "    \n",
+    "    words_on_line = one_line.split()\n",
+    "    number_of_words += len(words_on_line)   # how many words on this line? Add to the running total\n",
     "    \n",
     "print(f'lines: {number_of_lines}')    \n",
     "print(f'characters: {number_of_characters}')    \n",
@@ -2621,12 +2624,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fa02a73",
+   "cell_type": "markdown",
+   "id": "fbb3b169",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. (More on) reading from files\n",
+    "2. Using data structures + reading from files\n",
+    "3. Writing to files "
+   ]
   }
  ],
  "metadata": {
